[package]
name = "sfo-event"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/wugren/sfo-event.git"
license-file = "LICENSE"
description = "event emitter"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.103", default-features = false, features = ["full"]}

[dev-dependencies]
async-trait = "0.1.88"

